tests/lean/1433.lean.expected.out
1433.lean:11:49-11:54: error: Type mismatch
  rfl
has type
  ?m = ?m
but is expected to have type
  dividend % divisor = wrongRem
